--- a/front/managerpage1.css
+++ b/front/managerpage1.css
@@ -726,3 +726,17 @@ ul li {
     }
 
 }
+.user-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.user-table th, .user-table td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: left;
+}
+
+.user-table th {
+    background-color: #f2f2f2;
+}
